{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "bebcfa50-c730-4792-a182-28c219d4e3dd",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "57bcf0a3-2d7a-40fd-a710-b207da85fcbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "78a07825-a6f6-42e5-a79b-7470b2fcd2d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "c9626dc0-efff-4b4f-aade-9bd0b0481378",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Advance Dialogue",
                    "type": "Button",
                    "id": "0ef9ecde-47ea-4e70-9924-bc6246cfb40e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select Option",
                    "type": "Button",
                    "id": "fccea8a6-8e0f-41c5-a8a0-0f6e0c21883b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll Up",
                    "type": "Button",
                    "id": "b928ebe2-f2a6-4cb9-9228-028eb6d8a50f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll Down",
                    "type": "Button",
                    "id": "a3f3832e-2275-48fe-9f01-febe0b85f9ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "PassThrough",
                    "id": "c2b03a1f-5e5d-4938-972c-c7a4c08ee239",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b5b2f1ce-2095-4205-bc1c-f70631e30c2e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adac2598-484f-4390-bab7-53b744161d38",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b19f020b-3a50-44bc-8209-f1be5b786e99",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eaf6657-7bb2-43ba-937c-373ef7dba65e",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5b45eb5-ab6d-4d7b-abf2-6e24863d2614",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Advance Dialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b3fed31-4af6-4eaf-b158-264492989ad4",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Advance Dialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91df86ca-a56f-4a2b-8e2c-5fbf90218bf2",
                    "path": "<Keyboard>/f",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Select Option",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d27a48be-8270-4b6d-b849-82baaabfc0b1",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Select Option",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18b22ed2-447f-4c0b-8eaa-1e30bf2f7bf7",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14c13158-6cd2-491a-9f4a-3e0e517b0b56",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3559ff76-89bb-42f7-88ca-a2bd30af0af7",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b647a4c-9dde-4c81-a879-1be04c58289d",
                    "path": "<XInputController>/dpad/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}